[package]
name = "audio_recorder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alsa = "0.6.0"
alsa-sys = "0.3.1"
clap = { version = "3.1.18", features = ["derive"] }
color-eyre = "0.6.1"
cpal = "0.13.5"
